--- a/app/src/app/pages/client/client.component.scss
+++ b/app/src/app/pages/client/client.component.scss
@@ -7,16 +7,7 @@
 .client-page .subtitle {
     font-size: 1.1rem;
 }
-
-.form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: end;
-}
   
-.example-full-width {
+.input-full-width {
     width: 100%;
 }
