--- a/app/src/app/components/client/list-client/list-client.component.scss
+++ b/app/src/app/components/client/list-client/list-client.component.scss
@@ -7,3 +7,14 @@
     align-items: row;
     justify-content: space-between;
 }
+
+.filters {
+    display: flex;
+    align-items: row;
+}
+
+.filters button {
+    margin: 0px 0px 0px 30px;
+    height: 60px;
+    width: 100px;
+}
