feat: criando página de cliente

--- a/app/src/app/components/client/page-client/page-client.component.html
+++ b/app/src/app/components/client/page-client/page-client.component.html
@@ -1,9 +1,16 @@
-<mat-card class="card">
-    <div>
-        <mat-card-title>{{ client?.name }}</mat-card-title>
-        <mat-card-subtitle>Cliente de ID: {{ client?._id }}</mat-card-subtitle>
-    </div>
-    <a>
-        <img [src]="client?.image_src" class="img1" alt="logo do cliente">
-    </a>
+<mat-card>
+    <mat-card class="card">
+        <div class="content">
+            <div>
+                <mat-card-title>{{ client?.name }}</mat-card-title>
+                <mat-card-subtitle>Cliente de ID: {{ client?._id }}</mat-card-subtitle>
+            </div>
+            <a>
+                <img src="assets/load_image.jpg" class="img1" alt="logo do cliente" #imgclient>
+            </a>
+        </div>
+        <mat-card-actions class="navigation">
+            <button class="voltar">Voltar</button>
+        </mat-card-actions>
+    </mat-card>
 </mat-card>
