--- a/app/src/app/components/client/page-client/page-client.component.scss
+++ b/app/src/app/components/client/page-client/page-client.component.scss
@@ -1,13 +1,60 @@
-.img1 {
-    width: 100px;
+.card {
+    height: 135px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.card {
+.content {
     display: flex;
     align-items: row;
     justify-content: space-between;
 }
 
-body {
-    background-color: gainsboro;
+.img1 {
+    width: 100px;
+}
+
+.voltar {
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid #9c9c9c;
+    border-radius: 0.6rem;
+    color: #757575;
+    cursor: pointer;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
+    align-self: center;
+    font-size: 0.6rem;
+    font-weight: 400;
+    line-height: 1;
+    margin: 0px;
+    padding: 0.5rem 0.5rem;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+}
+
+.voltar:hover,
+.voltar:focus {
+    color: #fff;
+    outline: 0;
+}
+
+.voltar {
+    -webkit-transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+    transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+}
+
+.voltar:hover {
+    box-shadow: 0 0 40px 40px #9c9c9c inset;
 }
