--- a/app/src/app/pages/enterprise/enterprise.component.html
+++ b/app/src/app/pages/enterprise/enterprise.component.html
@@ -1,7 +1,7 @@
 <mat-card class="enterprise-page">
     <mat-card-title class="title">Página das Empresas</mat-card-title>
     <mat-card-subtitle class="subtitle">
-        Visualização de todas as empresas registradss no sistema
+        Visualização de todas as empresas registradas no sistema
     </mat-card-subtitle>
 </mat-card>
 <mat-card>
