--- a/app/src/app/components/enterprise/list-enterprise/list-enterprise.component.scss
+++ b/app/src/app/components/enterprise/list-enterprise/list-enterprise.component.scss
@@ -1,14 +1,4 @@
-.img1 {
-    width: 100px;
-}
-
-.item-enterprise {
+.form {
     display: flex;
-    align-items: row;
-    justify-content: space-between;
-}
-
-.filters {
-    display: flex;
-    align-items: row;
+    flex-direction: row-reverse;
 }
