--- a/app/src/app/components/client/list-client/list-client.component.scss
+++ b/app/src/app/components/client/list-client/list-client.component.scss
@@ -1,10 +1,49 @@
 .filters {
     display: flex;
     align-items: row;
+    justify-content: space-between;
+}
+
+.navigation {
+    display: flex;
+    align-items: row;
 }
 
 .filters button {
-    margin: 0px 0px 0px 30px;
-    height: 60px;
+    margin: 0px 30px 0px 0px;
     width: 100px;
+}
+
+.btns {
+    box-sizing: border-box;
+    border: 2px solid #9c9c9c;
+    border-radius: 0.6rem;
+    color: #757575;
+    cursor: pointer;
+    display: flex;
+    align-self: center;
+    font-size: 0.6rem;
+    font-weight: 400;
+    line-height: 1;
+    margin: 0px;
+    padding: 0.5rem 0.5rem;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+}
+
+.btns:hover,
+.btns:focus {
+    color: #fff;
+    outline: 0;
+}
+
+.btns {
+    -webkit-transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+    transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+}
+
+.btns:hover {
+    box-shadow: 0 0 40px 40px #9c9c9c inset;
 }
