feat: adicionando nevegacao entre as rotas de listas clientes e pagina do cliente

--- a/app/src/app/components/client/page-client/page-client.component.html
+++ b/app/src/app/components/client/page-client/page-client.component.html
@@ -10,7 +10,7 @@
             </a>
         </div>
         <mat-card-actions class="navigation">
-            <button class="voltar">Voltar</button>
+            <button class="voltar" (click)="backToListClient()">Voltar</button>
         </mat-card-actions>
     </mat-card>
 </mat-card>
