style: adicionando espaçamento entre cada card, nas páginas de listagens

--- a/app/src/app/components/client/list-client/list-client.component.html
+++ b/app/src/app/components/client/list-client/list-client.component.html
@@ -11,7 +11,7 @@
     </form>
 </div>
 <div *ngIf="card_client">
-    <mat-card *ngFor="let client of clients">
+    <mat-card *ngFor="let client of clients" class="card_list">
         <app-card-client [client]="client" (click)="visualizarClient(client)"></app-card-client>
     </mat-card>
 </div>
