--- a/app/src/app/components/enterprise/list-enterprise/list-enterprise.component.html
+++ b/app/src/app/components/enterprise/list-enterprise/list-enterprise.component.html
@@ -7,7 +7,7 @@
     </form>
 </div>
 <div>
-    <mat-card *ngFor="let data of enterprises">
+    <mat-card *ngFor="let data of enterprises" class="card_list">
         <app-card-enterprise [data]="data"></app-card-enterprise>
     </mat-card>
 </div>
