style: adicionando borda do card no card-totais

--- a/app/src/app/components/client/card-totais/card-totais.component.html
+++ b/app/src/app/components/client/card-totais/card-totais.component.html
@@ -1,14 +1,16 @@
-<div>
-    <mat-card-title>Números Totais de nosso sistema:</mat-card-title>
-    <mat-card-content>
-        <p>
-            Quantidade total de Clientes: {{ totais.quant_clients }}
-        </p>
-        <p>
-            Quantidade total de empreendimentos: {{ totais.quant_enterprises }}
-        </p>
-        <p>
-            Quantidade total de imóveis: {{ totais.quant_realties }}
-        </p>
-    </mat-card-content>
-</div>
+<mat-card>
+    <div>
+        <mat-card-title>Números Totais de nosso sistema:</mat-card-title>
+        <mat-card-content>
+            <p>
+                Quantidade total de Clientes: {{ totais.quant_clients }}
+            </p>
+            <p>
+                Quantidade total de empreendimentos: {{ totais.quant_enterprises }}
+            </p>
+            <p>
+                Quantidade total de imóveis: {{ totais.quant_realties }}
+            </p>
+        </mat-card-content>
+    </div>
+</mat-card>
