refactor: adicionando verificação para qualquer possível falta de link de img na página list-client

--- a/app/src/app/components/client/card-client/card-client.component.html
+++ b/app/src/app/components/client/card-client/card-client.component.html
@@ -12,6 +12,6 @@
         </mat-card-content>
     </div>
     <a>
-        <img [src]="client.image_src" class="img1" alt="logo do cliente">
+        <img src="assets/load_image.jpg" class="img1" alt="logo do cliente" #img_client>
     </a>
 </div>
