feat: adicionando visualização de totais na página de Detalhes do Cliente

--- a/app/src/app/components/client/list-client/list-client.component.html
+++ b/app/src/app/components/client/list-client/list-client.component.html
@@ -16,5 +16,5 @@
     </mat-card>
 </div>
 <div *ngIf="card_totais" >
-    <app-card-totais [totais]="totais"></app-card-totais>
+    <app-card-totais [totais]="totais" [list_client_view]=true></app-card-totais>
 </div>
