--- a/app/src/app/components/client/card-totais/card-totais.component.html
+++ b/app/src/app/components/client/card-totais/card-totais.component.html
@@ -2,14 +2,14 @@
     <div>
         <mat-card-title>Números Totais de nosso sistema:</mat-card-title>
         <mat-card-content>
-            <p>
-                Quantidade total de Clientes: {{ totais.quant_clients }}
+            <p *ngIf="list_client_view">
+                Quantidade total de Clientes: {{ totais?.quant_clients }}
             </p>
             <p>
-                Quantidade total de empreendimentos: {{ totais.quant_enterprises }}
+                Quantidade total de empreendimentos: {{ totais?.quant_enterprises }}
             </p>
             <p>
-                Quantidade total de imóveis: {{ totais.quant_realties }}
+                Quantidade total de imóveis: {{ totais?.quant_realties }}
             </p>
         </mat-card-content>
     </div>
