--- a/app/src/app/components/client/page-client/page-client.component.scss
+++ b/app/src/app/components/client/page-client/page-client.component.scss
@@ -3,9 +3,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-bottom: 20px;
 }
 
-.content {
+.client_card {
     display: flex;
     align-items: row;
     justify-content: space-between;
