--- a/app/src/app/pages/enterprise/enterprise.component.html
+++ b/app/src/app/pages/enterprise/enterprise.component.html
@@ -5,5 +5,13 @@
     </mat-card-subtitle>
 </mat-card>
 <mat-card>
-    <app-list-enterprise></app-list-enterprise>
+    <div class="filters">
+        <form class="form">
+            <mat-form-field appearance="fill">
+                <mat-label>Filtrar Empresas</mat-label>
+                <input matInput placeholder="Ex. Predialize" (change)="keyPress($event)">
+            </mat-form-field>
+        </form>
+    </div>
+    <app-list-enterprise [name]="name" [enterprises]="enterprises"></app-list-enterprise>
 </mat-card>
