--- a/app/src/app/pages/enterprise/enterprise.component.html
+++ b/app/src/app/pages/enterprise/enterprise.component.html
@@ -13,5 +13,5 @@
             </mat-form-field>
         </form>
     </div>
-    <app-list-enterprise [name]="name" [enterprises]="enterprises"></app-list-enterprise>
+    <app-list-enterprise [enterprises]="enterprises"></app-list-enterprise>
 </mat-card>
