feat: preparando pagina de detalhes do cliente para receber lista de empresas

--- a/app/src/app/components/client/page-client/page-client.component.html
+++ b/app/src/app/components/client/page-client/page-client.component.html
@@ -14,4 +14,5 @@
         </mat-card-actions>
     </mat-card>
     <app-card-totais [totais]="totais" [list_client_view]=false></app-card-totais>
+    <!-- <app-list-enterprise [enterprises]="enterprises"></app-list-enterprise> -->
 </mat-card>
