refactor: mudança da chamada de card-enterprise component, para atender ao novo design do componente

--- a/app/src/app/components/enterprise/list-enterprise/list-enterprise.component.html
+++ b/app/src/app/components/enterprise/list-enterprise/list-enterprise.component.html
@@ -1,5 +1,5 @@
 <div>
     <mat-card *ngFor="let data of enterprises" class="card_list">
-        <app-card-enterprise [data]="data"></app-card-enterprise>
+        <app-card-enterprise [page_client_view]="page_client_view" [data]="data"></app-card-enterprise>
     </mat-card>
 </div>
